--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -76,7 +76,7 @@ body { margin: 0; }
     /* Nav bar top */
 .nav-top {
     display: flex;
-    padding: 20px 30px;
+    padding: 15px 30px;
     border-bottom: 1px solid #f7f7f7;
 }
 
@@ -126,5 +126,13 @@ th { background-color: #ff9800; }
     color: #fff;
     border-radius: 5px;
 }
-
+.form-profile {
+    background-color: #2c2c2c;
+    padding: 20px;
+    color: #fff;
+    border-radius: 5px;
+}
 .img-profile { max-width: 320px; border: 2px solid orange; }
+
+.card-title {     color: #007bff;
+    text-transform: uppercase;}
