--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -78,6 +78,7 @@ body { margin: 0; }
     display: flex;
     padding: 15px 30px;
     border-bottom: 1px solid #f7f7f7;
+    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
 }
 
     .nav-top li a {
@@ -117,7 +118,13 @@ h3 {
     padding: 10px;
     border-radius: 5px;
     color: #fff;
+    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
 }
+
+table {
+    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
+}
+
 th { background-color: #ff9800; }
 
 .form-auth { margin: auto; max-width: 500px;
@@ -125,14 +132,27 @@ th { background-color: #ff9800; }
     padding: 20px;
     color: #fff;
     border-radius: 5px;
+    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
 }
 .form-profile {
     background-color: #2c2c2c;
     padding: 20px;
     color: #fff;
     border-radius: 5px;
+    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
 }
-.img-profile { max-width: 320px; border: 2px solid orange; }
+.img-profile { max-width: 320px; border: 2px solid orange;
+    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
+}
 
+.card {
+    box-shadow: 0 1px 0px 0 rgba(0,0,0,0.16),0 1px 5px 0 rgba(0,0,0,0.12)!important;
+}
 .card-title {     color: #007bff;
     text-transform: uppercase;}
+
+.form-search {
+    padding: 20px 20px 20px 35px;
+    border-radius: 5px;
+    border: 1px solid #f3f3f3;
+}
