--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -89,7 +89,6 @@ body { margin: 0; }
 
     .nav-top li a:hover {
         color: #ff9800;
-        transform: rotate(360deg);
     }
 
 
@@ -131,16 +130,14 @@ th { background-color: #ff9800; }
     box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
 }
 .form-profile {
-    background-color: #2c2c2c;
     padding: 20px;
-    color: #fff;
     border-radius: 5px;
-    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
+    box-shadow: 1px 11px 18px 1px rgba(0,0,0,0.1),0 0px 22px 2px rgba(0,0,0,0.2)!important;
 }
 .img-profile {
     max-width: 320px;
     border-radius: 5px;
-    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
+    box-shadow: 1px 11px 18px 1px rgba(0,0,0,0.1),0 0px 22px 2px rgba(0,0,0,0.2)!important;
 }
 
 .card {
@@ -153,4 +150,8 @@ th { background-color: #ff9800; }
     padding: 20px 20px 20px 35px;
     border-radius: 5px;
     border: 1px solid #e7e7e7;
+}
+
+.table-dark th, .table-dark td, .table-dark thead th {
+    border-color: #ffffff;
 }
