--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,4 +1,4 @@
-body { margin: 0; }
+body { margin: 0; background-color: #f5f5f5; }
 
 .m-container {
     width: 100%;
@@ -78,7 +78,8 @@ body { margin: 0; }
     display: flex;
     padding: 15px 30px;
     border-bottom: 1px solid #f7f7f7;
-    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
+    background-color: #ffffff;
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0),0 1px 17px 0 rgba(0, 0, 0, 0.06) !important;
 }
 
     .nav-top li a {
@@ -105,10 +106,11 @@ body { margin: 0; }
 h3 {
     text-transform: uppercase;
     font-size: 20px;
-    color: #9E9E9E;
-    font-family: fantasy;
+    color: #b9b9b9;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #ffffff;
+    padding-bottom: 20px;
 }
 .row { margin: 0;
     padding: 15px; }
@@ -117,27 +119,28 @@ h3 {
 
 table {
     border-radius: 5px;
-    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0),0 1px 17px 0 rgba(0, 0, 0, 0.06) !important;
 }
 
-th { background-color: #ff9800; }
+th { background-color: #ffffff; color: #000000; }
 
 .form-auth { margin: auto; max-width: 500px;
     background-color: #2c2c2c;
     padding: 20px;
     color: #fff;
     border-radius: 5px;
-    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1),0 1px 17px 0 rgba(0,0,0,0.2)!important;
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0),0 1px 17px 0 rgba(0, 0, 0, 0.06) !important;
 }
 .form-profile {
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 1px 11px 18px 1px rgba(0,0,0,0.1),0 0px 22px 2px rgba(0,0,0,0.2)!important;
+    background-color: #ffffff;
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0),0 1px 17px 0 rgba(0, 0, 0, 0.06) !important;
 }
 .img-profile {
     max-width: 320px;
     border-radius: 5px;
-    box-shadow: 1px 11px 18px 1px rgba(0,0,0,0.1),0 0px 22px 2px rgba(0,0,0,0.2)!important;
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0),0 1px 17px 0 rgba(0, 0, 0, 0.06) !important;
 }
 
 .card {
@@ -149,7 +152,8 @@ th { background-color: #ff9800; }
 .form-ajout, .form-search {
     padding: 20px 20px 20px 35px;
     border-radius: 5px;
-    border: 1px solid #e7e7e7;
+    border: 1px solid #ffffff;
+    background-color: #ffffff;
 }
 
 .table-dark th, .table-dark td, .table-dark thead th {
