--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -162,3 +162,5 @@ th { background-color: #ffffff; color: #000000; }
 
 label {
     font-weight: bold;}
+
+form .btn-success {     background-color: #FF9800; border: 1px solid #ff9800; }
