--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -11,34 +11,36 @@ body { margin: 0; background-color: #f5f5f5; }
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    margin-top: 50px;
 }
 
 .m-col-3 { flex: 1 1 20%; }
 .m-col-9 { flex: 1 1 80%; }
 
 
-
-/* Top Brand ______________ */
-.top-brand , .nav-left , .nav-top {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.top-brand {
+/* ------------------ Nav Bar Lef - ------------ */
+.nav-bar-left {
     background-color: #232323;
     border-right: 2px solid #ff9800;
+    position: fixed;
+    top: 85px;
+    bottom: 0;
+    left: 0;
+    padding: 0;
+    min-width: 260px;
+    box-shadow: 6px 0 6px rgba(0,0,0,.1);
 }
+
+/* Top Brand */
+    .top-brand , .nav-left , .nav-top {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
 
     .top-brand li { font-size: 16px; padding: 20px; text-align: center; }
 
-    /* Nav left ________________ */
-.nav-left {
-    background-color: #2c2c2c;
-    height: 90%;
-    border-right: 2px solid #ff9800;
-}
-
+/* Nav left */
     .nav-left li {
         transition: all 0.2s ease;
         border-bottom: 1px solid #3a3a3a;
@@ -73,13 +75,19 @@ body { margin: 0; background-color: #f5f5f5; }
 
     .nav-left li:hover > a, .nav-left li:focus > a, .nav-left li:active > a { color: #ff9800; }
 
-    /* Nav bar top */
+
+/* ------------ Nav bar top ------------- */
 .nav-top {
     display: flex;
     padding: 15px 30px;
     border-bottom: 1px solid #f7f7f7;
     background-color: #ffffff;
-    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0),0 1px 17px 0 rgba(0, 0, 0, 0.06) !important;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.3);
 }
 
     .nav-top li a {
@@ -91,15 +99,6 @@ body { margin: 0; background-color: #f5f5f5; }
     .nav-top li a:hover {
         color: #6a696a;
     }
-
-
-    /* Media queries */
-@media screen and (max-width: 600px) {
-
-    .nav-left {
-        height: auto;
-    }
-}
 
 
 /**/
@@ -164,3 +163,26 @@ label {
     font-weight: bold;}
 
 .btn-secondary, form .btn-success {     background-color: #FF9800; border: 1px solid #ff9800; }
+
+
+/* ----------------------- Media queries */
+@media screen and (max-width: 1124px) {
+    .nav-bar-left {
+        display: block;
+        z-index: 3;
+        outline: 0;
+        box-sizing: border-box;
+        overflow-y: auto;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    .nav-bar-left {
+        display: block;
+        z-index: 3;
+        outline: 0;
+        box-sizing: border-box;
+        overflow-y: auto;
+    }
+}
